# opsmon

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.toml
data/: sample_timeseries.csv
examples/: report.html  report.json
scripts/: generate_sample_data.py
src/opsmon/: __init__.py  checks.py  cli.py  config.py  report.py  runner.py
tests/: test_runner.py
