[project]
name = "opsmon"
version = "0.1.0"
description = "Operational Monitoring & Data Reliability Framework for multi-source time-series inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "tomli>=2.0",
]

[project.scripts]
opsmon = "opsmon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
